k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversao-distancia
  labels:
    app: conversao-distancia
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conversao-distancia
  template:
    metadata:
      labels:
        app: conversao-distancia
        version: v1
    spec:
      containers:
        - name: conversao-distancia
          image: jhowssilva/conversao-distancia:v1.0.0
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
