k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversao-distancia-service
  labels:
    app: conversao-distancia
spec:
  selector:
    app: conversao-distancia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
